# work-helper

./: .gitignore  .gitleaksignore  Dockerfile.n8n  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  tts.py
crawlers/douyin/web/: config.yaml
intelligentactiverecall/: dbconfig.yml  document.md
intelligentactiverecall/internals/: evaluator.py  init_workflow.py
intelligentactiverecall/migrations/: 20250510083659-english_most_forgotten.sql  20250515164125-add_more_column.sql  20250516105926-add_more_column.sql  20250519112217-add_trigger.sql  20250519145453-add_account.sql
realtimetranscribe/: capture_audio.go  go.mod  go.sum
scripts/: build-ngrok.sh  get-ngrok-url.sh
tasks/downloader/: douyin.py
tasks/listener/: link_filter.py
tasks/transcriber/: Dockerfile  main.py  pyproject.toml
tasks/transcriber/langchian/: whisper_large_v3_turbo.py
tasks/transcriber/openai/: openai.py
tasks/voice/: pyproject.toml
