[project]
name = "transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "teq-quocbang",email = "bangthong@teqnological.asia"}
]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "llvmlite (>=0.39)",
    "librosa (>=0.10)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "langchain (<0.3)",
    "pydantic (<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
